// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluentSideNav render nav bar 1`] = `
<DocumentFragment>
  <div
    id="sideNavContainer"
  >
    <mock-detailsviewleftnav
      issidenavopen="false"
      narrowmodestatus="[object Object]"
      selectedpivot="0"
      tabstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`FluentSideNav render null if tab is closed 1`] = `<DocumentFragment />`;

exports[`FluentSideNav render side nav 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="leftNavPanel"
    hasclosebutton="false"
    islightdismiss="true"
    isopen="false"
    type="8"
  >
    <mock-detailsviewleftnav
      issidenavopen="false"
      narrowmodestatus="[object Object]"
      selectedpivot="0"
      tabstoredata="[object Object]"
    />
  </mock-genericpanel>
</DocumentFragment>
`;
